--- a/Quan_ao/Quan_ao/View/Admin/Page_Admin.Master
+++ b/Quan_ao/Quan_ao/View/Admin/Page_Admin.Master
@@ -42,8 +42,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#">Quản Lý Tài Khoản</a>
-                        <a class="dropdown-item" href="#">Đăng xuất</a>
+                        <a class="dropdown-item" href="QL_taikhoan.aspx">Quản Lý Tài Khoản</a>
                     </div>
                 </li>
             </ul>
