--- a/Quan_ao/Quan_ao/View/User/Page_User.Master
+++ b/Quan_ao/Quan_ao/View/User/Page_User.Master
@@ -21,9 +21,9 @@
     <form runat="server">
         <asp:ScriptManager runat="server">
         </asp:ScriptManager>
-        <div>
-            <header>
-                <div class="menu">
+        <div class="container">
+            <header class="row">
+                <div class="menu col-12 col-md-6 col-lg-6">
                     <nav>
                         <ul>
                            
@@ -187,12 +187,12 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="logo">
+                <div class="logo col-12 col-md-2 col-lg-2">
                     <h2>Shop<span>Hiuu<br />
                         <asp:Label ID="lbltenkhach" runat="server" Text=""></asp:Label>
                     </span></h2>
                 </div>
-                <div class="menubar">
+                <div class="menubar col-12 col-md-4 col-lg-4">
                     <ul>
                         <li>
                             <input type="text" placeholder="   seacrh"><i class="fa fa-search" aria-hidden="true"></i></li>
