--- a/Quan_ao/Quan_ao/View/User/Page_User.Master
+++ b/Quan_ao/Quan_ao/View/User/Page_User.Master
@@ -38,59 +38,7 @@
 
 		<!-- Top Navigation -->
 
-		<div class="top_nav">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-6">
-						<div class="top_nav_left">free shipping on all u.s orders over $50</div>
-					</div>
-					<div class="col-md-6 text-right">
-						<div class="top_nav_right">
-							<ul class="top_nav_menu">
-
-								<!-- Currency / Language / My Account -->
-
-								<li class="currency">
-									<a href="#">
-										usd
-										<i class="fa fa-angle-down"></i>
-									</a>
-									<ul class="currency_selection">
-										<li><a href="#">cad</a></li>
-										<li><a href="#">aud</a></li>
-										<li><a href="#">eur</a></li>
-										<li><a href="#">gbp</a></li>
-									</ul>
-								</li>
-								<li class="language">
-									<a href="#">
-										English
-										<i class="fa fa-angle-down"></i>
-									</a>
-									<ul class="language_selection">
-										<li><a href="#">French</a></li>
-										<li><a href="#">Italian</a></li>
-										<li><a href="#">German</a></li>
-										<li><a href="#">Spanish</a></li>
-									</ul>
-								</li>
-								<li class="account">
-									<a href="#">
-										My Account
-										<i class="fa fa-angle-down"></i>
-									</a>
-									<ul class="account_selection">
-										<li><a href="#"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-										<li><a href="#"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
-									</ul>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
+		
 		<!-- Main Navigation -->
 
 		<div class="main_nav_container">
@@ -109,7 +57,8 @@
 								<li><a style="font-size:24px" href="/View/User/home.aspx?ID=4">Giày dép</a></li>
 							</ul>
 							<ul class="navbar_user">
-								<li><a href="../DangNhap.aspx" style="display:inline">Đăng nhập<i class="fa fa-user" aria-hidden="true"></i></a></li>
+								<i class="fa fa-user" aria-hidden="true"></i>
+								<asp:LinkButton ID="link_dangnhap_xuat" runat="server"  Text="Đăng nhập" OnClick="link_dangnhap_xuat_Click">Đăng nhập</asp:LinkButton>
 								<li class="checkout">
 									<a href="Gio_hang.aspx" style="display:inline"> Giỏ hàng
 										<i class="fa fa-shopping-cart" aria-hidden="true"></i>
